# libfp

./: CMakeLists.txt  README.md
include/fp/: bitmask.h  dynarray.h  dynarray.hpp  hash.h  pointer.h  pointer.hpp  string.h  string.hpp
include/fp/hash/: map.h  table.h
tests/: compiles.c  fp.tests.cpp  fp.tests.cpp-api.cpp
